[package]
name = "unitary-simulator"
version = "0.1.0"
authors = ["Juan Gomez <atilag@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
nalgebra = "0.12.3"
num = "0.1"
alga = "0.5.1"
cpython = "0.1"
bencher = "0.1.2"
cpuprofiler = "0.0.3"

[[bench]]
name = "unitary-simulator"
harness = false
